fixed Providers image on Safari

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1204,7 +1204,10 @@
 }
 
 #ourProvidersImage {
-
+  height: 100%;
+  max-height: 225px;
+  max-width: 150px;
+  width: auto;
 }
 
 #ourProvidersShortBio {
